ncc/testsuite/negative/tyvars.n
class A [a, a] { } // E: duplicate type parameter `a'

class B [x] {
  class C [x] { // E: type parameter `x' has the same name as type parameter from the outer type `B'
  }
}
